plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'org.socius'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

ext {
    // Define versions for easier updates
    modelMapperVersion = '3.2.2'
    mapstructVersion = '1.5.5.Final'
    hibernateValidatorVersion = '8.0.1.Final'
    jakartaValidationVersion = '3.0.2'
    lombokMapstructBindingVersion = '0.2.0'
    lettuceVersion = '6.3.2.RELEASE'
    jacksonDatatypeJSR310Version = '2.19.0'
}

dependencies {
    // Spring Boot Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Data Access
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    runtimeOnly 'org.postgresql:postgresql'

    // Session Management
    implementation 'org.springframework.session:spring-session-core'
//    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation "io.lettuce:lettuce-core:${lettuceVersion}"

    // Validation
    implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"

    // Utilities
    implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Websockets
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // RabitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct processors
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"

    // Jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0'

    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'com.h2database:h2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Add this block to properly configure the annotation processor order
tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.compilerArgs += [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=IGNORE',
            '-Amapstruct.verbose=true'
    ]

    options.annotationProcessorPath = configurations.annotationProcessor

}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}

test {
    jvmArgs = ["-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"]
}